Change name to CRYSTALpytools

--- a/examples/calculate.ipynb
+++ b/examples/calculate.ipynb
@@ -26,18 +26,18 @@
    "outputs": [
     {
      "ename": "ImportError",
-     "evalue": "cannot import name 'cry_bsse' from 'CRYSTALpy.calculate' (/Users/brunocamino/miniconda3/envs/test_env/lib/python3.9/site-packages/CRYSTALpy/calculate.py)",
+     "evalue": "cannot import name 'cry_bsse' from 'CRYSTALpytools.calculate' (/Users/brunocamino/miniconda3/envs/test_env/lib/python3.9/site-packages/CRYSTALpytools/calculate.py)",
      "output_type": "error",
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mImportError\u001b[0m                               Traceback (most recent call last)",
-      "\u001b[0;32m/var/folders/f2/8kc7y9697m59bwltxjd42y300000gn/T/ipykernel_6345/1711536738.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mCRYSTALpy\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalculate\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcry_bsse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;31mImportError\u001b[0m: cannot import name 'cry_bsse' from 'CRYSTALpy.calculate' (/Users/brunocamino/miniconda3/envs/test_env/lib/python3.9/site-packages/CRYSTALpy/calculate.py)"
+      "\u001b[0;32m/var/folders/f2/8kc7y9697m59bwltxjd42y300000gn/T/ipykernel_6345/1711536738.py\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mfrom\u001b[0m \u001b[0mCRYSTALpytools\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcalculate\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mcry_bsse\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mImportError\u001b[0m: cannot import name 'cry_bsse' from 'CRYSTALpytools.calculate' (/Users/brunocamino/miniconda3/envs/test_env/lib/python3.9/site-packages/CRYSTALpytools/calculate.py)"
      ]
     }
    ],
    "source": [
-    "from CRYSTALpy.calculate import cry_bsse"
+    "from CRYSTALpytools.calculate import cry_bsse"
    ]
   },
   {
