--- a/examples/convert.ipynb
+++ b/examples/convert.ipynb
@@ -31,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_output\n",
-    "from CRYSTALpy.convert import cry_out2pmg"
+    "from CRYSTALpytools.crystal_io import Crystal_output\n",
+    "from CRYSTALpytools.convert import cry_out2pmg"
    ]
   },
   {
@@ -74,8 +74,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_output, Crystal_gui\n",
-    "from CRYSTALpy.convert import cry_gui2pmg"
+    "from CRYSTALpytools.crystal_io import Crystal_output, Crystal_gui\n",
+    "from CRYSTALpytools.convert import cry_gui2pmg"
    ]
   },
   {
@@ -131,8 +131,8 @@
    ],
    "source": [
     "from pymatgen.core.surface import Structure, Lattice\n",
-    "from CRYSTALpy.convert import cry_pmg2gui\n",
-    "from CRYSTALpy.crystal_io import write_crystal_gui\n",
+    "from CRYSTALpytools.convert import cry_pmg2gui\n",
+    "from CRYSTALpytools.crystal_io import write_crystal_gui\n",
     "\n",
     "lattice = Lattice.cubic(3.)\n",
     "mgo_pmg_obj = Structure(lattice, [\"Mg\", \"O\"],\n",
@@ -165,8 +165,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_output, Properties_output\n",
-    "from CRYSTALpy.convert import cry_bands2pmg"
+    "from CRYSTALpytools.crystal_io import Crystal_output, Properties_output\n",
+    "from CRYSTALpytools.convert import cry_bands2pmg"
    ]
   },
   {
@@ -268,8 +268,8 @@
     }
    ],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_gui\n",
-    "from CRYSTALpy.convert import cry_gui2ase\n",
+    "from CRYSTALpytools.crystal_io import Crystal_gui\n",
+    "from CRYSTALpytools.convert import cry_gui2ase\n",
     "\n",
     "mgo_gui = Crystal_gui()\n",
     "mgo_gui.read_cry_gui('data/mgo_optgeom.gui')\n",
@@ -292,8 +292,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import write_crystal_gui\n",
-    "from CRYSTALpy.convert import cry_ase2gui\n",
+    "from CRYSTALpytools.crystal_io import write_crystal_gui\n",
+    "from CRYSTALpytools.convert import cry_ase2gui\n",
     "\n",
     "from ase.build import bulk\n",
     "\n",
@@ -329,8 +329,8 @@
     }
    ],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_output\n",
-    "from CRYSTALpy.convert import cry_out2ase\n",
+    "from CRYSTALpytools.crystal_io import Crystal_output\n",
+    "from CRYSTALpytools.convert import cry_out2ase\n",
     "\n",
     "mgo_out = Crystal_output()\n",
     "mgo_out.read_cry_output('data/mgo_optgeom.out')\n",
@@ -361,8 +361,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_gui\n",
-    "from CRYSTALpy.convert import cry_gui2cif\n",
+    "from CRYSTALpytools.crystal_io import Crystal_gui\n",
+    "from CRYSTALpytools.convert import cry_gui2cif\n",
     "\n",
     "mgo_gui = Crystal_gui()\n",
     "mgo_gui.read_cry_gui('data/mgo_optgeom.gui')\n",
@@ -430,8 +430,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_output\n",
-    "from CRYSTALpy.convert import cry_gui2cif\n",
+    "from CRYSTALpytools.crystal_io import Crystal_output\n",
+    "from CRYSTALpytools.convert import cry_gui2cif\n",
     "\n",
     "mgo_out = Crystal_output()\n",
     "mgo_out.read_cry_output('data/mgo_optgeom.out')\n",
