--- a/examples/plot.ipynb
+++ b/examples/plot.ipynb
@@ -20,8 +20,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Properties_output\n",
-    "import CRYSTALpy.plot as cfplt\n"
+    "from CRYSTALpytools.crystal_io import Properties_output\n",
+    "import CRYSTALpytools.plot as cfplt\n"
    ]
   },
   {
