--- a/tutorial/Tutorial.ipynb
+++ b/tutorial/Tutorial.ipynb
@@ -5,7 +5,7 @@
    "id": "ef2ddff6",
    "metadata": {},
    "source": [
-    "# CRYSTALpy tutorial"
+    "# CRYSTALpytools tutorial"
    ]
   },
   {
@@ -21,10 +21,10 @@
    "id": "ad511d7e",
    "metadata": {},
    "source": [
-    "First, functions need to be imported. Since CRYSTALpy was installed via pip, python already knows where to find it. Therefore, all functions can be imported following this logic:\n",
+    "First, functions need to be imported. Since CRYSTALpytools was installed via pip, python already knows where to find it. Therefore, all functions can be imported following this logic:\n",
     "\n",
     "```console\n",
-    "from CRYSTALpy.module_name import function_name\n",
+    "from CRYSTALpytools.module_name import function_name\n",
     "```\n",
     "In this first exercise, we need to use the Crystal_input class that sits in the crystal_io module:"
    ]
@@ -36,7 +36,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_input"
+    "from CRYSTALpytools.crystal_io import Crystal_input"
    ]
   },
   {
@@ -52,7 +52,7 @@
    "id": "5e009dd1",
    "metadata": {},
    "source": [
-    "The first exercise will be creating and writing a CRYSTAL input file. We will see later a more convenient way to do this, but for now we are just going to pass CRYSTALpy a list of parameters that we need to build the input and then write it. This corresponds to manually writing to file, but instead of writing to file we are creating python lists (delimited by square brackets and using commas as separators):"
+    "The first exercise will be creating and writing a CRYSTAL input file. We will see later a more convenient way to do this, but for now we are just going to pass CRYSTALpytools a list of parameters that we need to build the input and then write it. This corresponds to manually writing to file, but instead of writing to file we are creating python lists (delimited by square brackets and using commas as separators):"
    ]
   },
   {
@@ -77,7 +77,7 @@
     "             ['FMIXING\\n', '70\\n'],\n",
     "             'DIIS\\n',\n",
     "             'ENDSCF\\n']\n",
-    "title = 'MgO CRYSTALpy tutorial' #optional"
+    "title = 'MgO CRYSTALpytools tutorial' #optional"
    ]
   },
   {
@@ -116,7 +116,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<CRYSTALpy.crystal_io.Crystal_input object at 0x10498c6a0>\n"
+      "<CRYSTALpytools.crystal_io.Crystal_input object at 0x10498c6a0>\n"
      ]
     }
    ],
@@ -168,7 +168,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpy.crystal_io.Crystal_input at 0x10498c6a0>"
+       "<CRYSTALpytools.crystal_io.Crystal_input at 0x10498c6a0>"
       ]
      },
      "execution_count": 6,
@@ -186,7 +186,7 @@
    "id": "8bd95ebe",
    "metadata": {},
    "source": [
-    "If we didn’t include title, CRYSTALpy would use “CRYSTALpy generated input” as first line of the input.\n",
+    "If we didn’t include title, CRYSTALpytools would use “CRYSTALpytools generated input” as first line of the input.\n",
     "\n",
     "Now mgo_input will contain the information about the different blocks. We can test this by executing:"
    ]
@@ -238,7 +238,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MgO CRYSTALpy tutorial\n",
+      "MgO CRYSTALpytools tutorial\n",
       "CRYSTAL\n",
       "0 0 0\n",
       "225\n",
@@ -554,7 +554,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "MgO CRYSTALpy tutorial\r\n",
+      "MgO CRYSTALpytools tutorial\r\n",
       "CRYSTAL\r\n",
       "0 0 0\r\n",
       "225\r\n",
@@ -620,7 +620,7 @@
     "\n",
     "_Hint: What can you see if you type_\n",
     "```console\n",
-    "from CRYSTALpy.crystal_io import\n",
+    "from CRYSTALpytools.crystal_io import\n",
     "```\n",
     "_and press Tab after the 'import' command? Can you see a class that might read the Crystal_output?_"
    ]
@@ -632,7 +632,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_output"
+    "from CRYSTALpytools.crystal_io import Crystal_output"
    ]
   },
   {
@@ -654,7 +654,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpy.crystal_io.Crystal_output at 0x121545ac0>"
+       "<CRYSTALpytools.crystal_io.Crystal_output at 0x121545ac0>"
       ]
      },
      "execution_count": 17,
@@ -814,7 +814,7 @@
    "id": "1fabe7b7",
    "metadata": {},
    "source": [
-    "If you would like to know what these values are, the best approach is to have a look at the source code itself. This can be found at this <a href=\"https://github.com/crystal-code-tools/CRYSTALpy/blob/main/CRYSTALpy/crystal_io.py\">link</a> (look for \"get_last_geom\").\n",
+    "If you would like to know what these values are, the best approach is to have a look at the source code itself. This can be found at this <a href=\"https://github.com/crystal-code-tools/CRYSTALpytools/blob/main/CRYSTALpytools/crystal_io.py\">link</a> (look for \"get_last_geom\").\n",
     "\n",
     "You should see that the list returned at the end of the function, self.last_geom, contains three elements:\n",
     "- the lattice vectors (2D list)\n",
@@ -865,7 +865,7 @@
    "id": "9542cf63",
    "metadata": {},
    "source": [
-    "For a full list of information that can be extracted from the Crystal_output object, please refer to <a href=\"https://github.com/crystal-code-tools/CRYSTALpy/blob/main/examples/crystal_io.ipynb\">this example notebook</a>."
+    "For a full list of information that can be extracted from the Crystal_output object, please refer to <a href=\"https://github.com/crystal-code-tools/CRYSTALpytools/blob/main/examples/crystal_io.ipynb\">this example notebook</a>."
    ]
   },
   {
@@ -893,7 +893,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from CRYSTALpy.crystal_io import Crystal_gui"
+    "#from CRYSTALpytools.crystal_io import Crystal_gui"
    ]
   },
   {
@@ -944,7 +944,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Properties_input"
+    "from CRYSTALpytools.crystal_io import Properties_input"
    ]
   },
   {
@@ -978,7 +978,7 @@
    "id": "c6f75fe4",
    "metadata": {},
    "source": [
-    "The CRYSTALpy module allows the user to define the band structure path in different ways. We are going to start with the simple approach of manually defining the fractional coordinate of the k points as a list of lists:"
+    "The CRYSTALpytools module allows the user to define the band structure path in different ways. We are going to start with the simple approach of manually defining the fractional coordinate of the k points as a list of lists:"
    ]
   },
   {
@@ -1028,7 +1028,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpy.crystal_io.Properties_input at 0x1049ada90>"
+       "<CRYSTALpytools.crystal_io.Properties_input at 0x1049ada90>"
       ]
      },
      "execution_count": 32,
@@ -1045,7 +1045,7 @@
    "id": "a517aec4",
    "metadata": {},
    "source": [
-    "As you can see in the cell above, CRYSTALpy transformed the fractional coordinates of the key points into the shrinking factor/integers structure used by CRYSTAL.\n",
+    "As you can see in the cell above, CRYSTALpytools transformed the fractional coordinates of the key points into the shrinking factor/integers structure used by CRYSTAL.\n",
     "\n",
     "We will see later an even easier way to define the k point path by using the pymatgen module.\n",
     "\n",
@@ -1177,7 +1177,7 @@
    "id": "03144973",
    "metadata": {},
    "source": [
-    "The CRYSTALpy module allows the user to read a large variety of properties outputs. The full list can be found at (INSERT LINK TO DOC).\n",
+    "The CRYSTALpytools module allows the user to read a large variety of properties outputs. The full list can be found at (INSERT LINK TO DOC).\n",
     "\n",
     "The logic follows the Crystal_output class, with the difference that different types output will be read depending on what the property is. The main goal of a properties object will be plotting, so let's start by creating the object and then move onto plotting.\n",
     "\n",
@@ -1194,7 +1194,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Properties_output"
+    "from CRYSTALpytools.crystal_io import Properties_output"
    ]
   },
   {
@@ -1206,7 +1206,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpy.crystal_io.Properties_output at 0x127378280>"
+       "<CRYSTALpytools.crystal_io.Properties_output at 0x127378280>"
       ]
      },
      "execution_count": 39,
@@ -1228,7 +1228,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpy.crystal_io.Properties_output at 0x127343550>"
+       "<CRYSTALpytools.crystal_io.Properties_output at 0x127343550>"
       ]
      },
      "execution_count": 40,
@@ -1264,7 +1264,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.plot import plot_cry_bands, plot_cry_doss"
+    "from CRYSTALpytools.plot import plot_cry_bands, plot_cry_doss"
    ]
   },
   {
@@ -1272,7 +1272,7 @@
    "id": "45f14366",
    "metadata": {},
    "source": [
-    "As you can imagine, there are plenty of settings that can be twicked in a plot. The plotting functions will have many preset values that can be modified when executing the function. In order to see all the parameters, the best way is to have a look at the source code <a href=\"https://github.com/crystal-code-tools/CRYSTALpy/blob/main/CRYSTALpy/plot.py\">here</a>. If there is also some more parameter you would like the plotting functions to implement, please feel free to add and submit a pull request on GitHub, or get in touch with us.\n",
+    "As you can imagine, there are plenty of settings that can be twicked in a plot. The plotting functions will have many preset values that can be modified when executing the function. In order to see all the parameters, the best way is to have a look at the source code <a href=\"https://github.com/crystal-code-tools/CRYSTALpytools/blob/main/CRYSTALpytools/plot.py\">here</a>. If there is also some more parameter you would like the plotting functions to implement, please feel free to add and submit a pull request on GitHub, or get in touch with us.\n",
     "\n",
     "Let's start by plotting the band structure:"
    ]
@@ -1333,7 +1333,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.convert import * "
+    "from CRYSTALpytools.convert import * "
    ]
   },
   {
@@ -1359,7 +1359,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_gui"
+    "from CRYSTALpytools.crystal_io import Crystal_gui"
    ]
   },
   {
@@ -1371,7 +1371,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpy.crystal_io.Crystal_gui at 0x1307b14f0>"
+       "<CRYSTALpytools.crystal_io.Crystal_gui at 0x1307b14f0>"
       ]
      },
      "execution_count": 45,
@@ -1952,7 +1952,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.convert import cry_gui2cif, cry_out2cif, cry_gui2xyz, cry_out2xyz"
+    "from CRYSTALpytools.convert import cry_gui2cif, cry_out2cif, cry_gui2xyz, cry_out2xyz"
    ]
   },
   {
