--- a/tutorial/Tutorial_plot.ipynb
+++ b/tutorial/Tutorial_plot.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# CRYSTALpy.plot tutorial"
+    "# CRYSTALpytools.plot tutorial"
    ]
   },
   {
@@ -21,7 +21,7 @@
     "As for all the crystal the crystal_function at first they need to be imported following the same logic:\n",
     "\n",
     "```console\n",
-    "from CRYSTALpy.module_name import function_name\n",
+    "from CRYSTALpytools.module_name import function_name\n",
     "```\n",
     "\n",
     "In the case of the plotting functions we will need both the file_readwite and the plot modules, to generate the band object from the properties output and plot it:"
@@ -33,8 +33,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Properties_output\n",
-    "import CRYSTALpy.plot as cfplt"
+    "from CRYSTALpytools.crystal_io import Properties_output\n",
+    "import CRYSTALpytools.plot as cfplt"
    ]
   },
   {
@@ -155,7 +155,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There are even more **kwargs that you could use to customize your band structure, and you can find some example <a href=\"https://github.com/crystal-code-tools/CRYSTALpy/blob/main/examples/plot.ipynb\">here</a>.\n",
+    "There are even more **kwargs that you could use to customize your band structure, and you can find some example <a href=\"https://github.com/crystal-code-tools/CRYSTALpytools/blob/main/examples/plot.ipynb\">here</a>.\n",
     "\n",
     "Now that you have seen how to plot a band structure you can try with your own data below:"
    ]
@@ -263,7 +263,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Further customization of the plot can be achieved through a series of **kwargs for which example could be found <a href=\"https://github.com/crystal-code-tools/CRYSTALpy/blob/main/examples/plot.ipynb\">in this notebook</a>.\n",
+    "Further customization of the plot can be achieved through a series of **kwargs for which example could be found <a href=\"https://github.com/crystal-code-tools/CRYSTALpytools/blob/main/examples/plot.ipynb\">in this notebook</a>.\n",
     "\n",
     "Among the many **kwargs one that could be particularly usefull for this kind of plot is the *k_range*, which will allow to select segments of the path  between two specific High Simmetry Points (HSP). *k_range* will have to be a list of two strings, which correspond to the starting and ending HSP, if a given HSP is repeted multiple times in the plot starting from the second time the HSP is used onwards the HSP will be followed by a number starting from 1."
    ]
@@ -311,7 +311,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "There is one last option for option for plotting multiple band structure in different subplots using the **kwargs *mode='compare'*, some example for such plotting mode could be found at the following <a href=\"https://github.com/crystal-code-tools/CRYSTALpy/blob/main/examples/plot.ipynb\">link</a>. "
+    "There is one last option for option for plotting multiple band structure in different subplots using the **kwargs *mode='compare'*, some example for such plotting mode could be found at the following <a href=\"https://github.com/crystal-code-tools/CRYSTALpytools/blob/main/examples/plot.ipynb\">link</a>. "
    ]
   },
   {
@@ -473,7 +473,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "More ways to customize your plots can be found  <a href=\"https://github.com/crystal-code-tools/CRYSTALpy/blob/main/examples/plot.ipynb\">in this notebook</a>. \n",
+    "More ways to customize your plots can be found  <a href=\"https://github.com/crystal-code-tools/CRYSTALpytools/blob/main/examples/plot.ipynb\">in this notebook</a>. \n",
     "\n",
     "Now you can play with this plotting function to plot your own data in the cell below:  "
    ]
