--- a/unit_test/test_notebook.ipynb
+++ b/unit_test/test_notebook.ipynb
@@ -7,7 +7,7 @@
    "source": [
     "# Unit tests notebook\n",
     "\n",
-    "For testing the CRYSTALpy please run this notebook.\n",
+    "For testing the CRYSTALpytools please run this notebook.\n",
     "\n",
     "Alternatively, you can run test_all(folder_path) from command line."
    ]
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "from CRYSTALpy.unit_test import *\n",
+    "from CRYSTALpytools.unit_test import *\n",
     "import pandas as pd\n",
     "\n",
     "input_test = crystal_input_test('./data_test/')\n",
@@ -248,7 +248,7 @@
     }
    ],
    "source": [
-    "from CRYSTALpy.unit_test import *\n",
+    "from CRYSTALpytools.unit_test import *\n",
     "import pandas as pd\n",
     "\n",
     "output_test = crystal_output_test('./data_test/')\n",
@@ -319,7 +319,7 @@
     }
    ],
    "source": [
-    "from CRYSTALpy.unit_test import *\n",
+    "from CRYSTALpytools.unit_test import *\n",
     "import pandas as pd\n",
     "\n",
     "output_test = convert_test('./data_test/')\n",
@@ -377,7 +377,7 @@
     }
    ],
    "source": [
-    "from CRYSTALpy.unit_test import *\n",
+    "from CRYSTALpytools.unit_test import *\n",
     "test_all('./data_test/')"
    ]
   }
