--- a/examples/data/density/Density tests.ipynb
+++ b/examples/data/density/Density tests.ipynb
@@ -8,7 +8,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(1, '../../../CRYSTALpy/')\n",
+    "sys.path.insert(1, '../../../CRYSTALpytools/')\n",
     "\n",
     "import shutil\n",
     "from execute import runcry, runprop\n",
@@ -68,15 +68,15 @@
       "hostname MacBook-Pro-3.local\r\n",
       "system Darwin MacBook-Pro-3.local 20.6.0 Darwin Kernel Version 20.6.0: Wed Nov 10 22:23:05 PST 2021; root:xnu-7195.141.14~1/RELEASE_ARM64_T8101 arm64\r\n",
       "user brunocamino\r\n",
-      "output data in /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpy/examples/data/density/../../../examples/data/density/system_guessp.out\r\n",
+      "output data in /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpytools/examples/data/density/../../../examples/data/density/system_guessp.out\r\n",
       "crystal executable in /Users/brunocamino/crystal\r\n",
-      "input data in /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpy/examples/data/density/../../../examples/data/density/system_guessp.d12\r\n",
+      "input data in /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpytools/examples/data/density/../../../examples/data/density/system_guessp.d12\r\n",
       "temporary directory /Users/brunocamino/crystal/tmp\r\n",
-      "scf guess from /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpy/examples/data/density/../../../examples/data/density/system_guessp.f9\r\n",
-      "external geometry input from /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpy/examples/data/density/../../../examples/data/density/system_guessp.gui\r\n",
-      "external geometry input saved in /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpy/examples/data/density/../../../examples/data/density/system_guessp_inp.gui\r\n",
-      "file fort.20 from /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpy/examples/data/density/../../../examples/data/density/system_guessp.f20\r\n",
-      "file fort.13 from /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpy/examples/data/density/../../../examples/data/density/system_guessp.f13\r\n",
+      "scf guess from /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpytools/examples/data/density/../../../examples/data/density/system_guessp.f9\r\n",
+      "external geometry input from /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpytools/examples/data/density/../../../examples/data/density/system_guessp.gui\r\n",
+      "external geometry input saved in /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpytools/examples/data/density/../../../examples/data/density/system_guessp_inp.gui\r\n",
+      "file fort.20 from /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpytools/examples/data/density/../../../examples/data/density/system_guessp.f20\r\n",
+      "file fort.13 from /Users/brunocamino/Desktop/Imperial/crystal-code-tools/CRYSTALpytools/examples/data/density/../../../examples/data/density/system_guessp.f13\r\n",
       "Adsorption tests\r\n",
       "EXTERNAL\r\n",
       "EXTPRT\r\n",
