--- a/examples/file_readwrite.ipynb
+++ b/examples/file_readwrite.ipynb
@@ -23,7 +23,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_input"
+    "from CRYSTALpytools.crystal_io import Crystal_input"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_output"
+    "from CRYSTALpytools.crystal_io import Crystal_output"
    ]
   },
   {
@@ -162,7 +162,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpy.crystal_io.Crystal_output at 0x10a4a3040>"
+       "<CRYSTALpytools.crystal_io.Crystal_output at 0x10a4a3040>"
       ]
      },
      "execution_count": 2,
@@ -437,7 +437,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Properties_output"
+    "from CRYSTALpytools.crystal_io import Properties_output"
    ]
   },
   {
@@ -457,7 +457,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpy.crystal_io.Properties_output at 0x1640857f0>"
+       "<CRYSTALpytools.crystal_io.Properties_output at 0x1640857f0>"
       ]
      },
      "execution_count": 11,
@@ -490,7 +490,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpy.crystal_io.Properties_output at 0x164085820>"
+       "<CRYSTALpytools.crystal_io.Properties_output at 0x164085820>"
       ]
      },
      "execution_count": 12,
@@ -519,8 +519,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_input\n",
-    "from CRYSTALpy.crystal_io import write_crystal_input"
+    "from CRYSTALpytools.crystal_io import Crystal_input\n",
+    "from CRYSTALpytools.crystal_io import write_crystal_input"
    ]
   },
   {
@@ -672,8 +672,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Properties_input\n",
-    "from CRYSTALpy.crystal_io import write_properties_input\n",
+    "from CRYSTALpytools.crystal_io import Properties_input\n",
+    "from CRYSTALpytools.crystal_io import write_properties_input\n",
     "\n",
     "#Create the bands input object\n",
     "bands_input = Properties_input()\n",
@@ -736,10 +736,10 @@
     "from pymatgen.symmetry.bandstructure import HighSymmKpath\n",
     "from pymatgen.symmetry.analyzer import SpacegroupAnalyzer\n",
     "\n",
-    "from CRYSTALpy.crystal_io import write_properties_input\n",
-    "from CRYSTALpy.crystal_io import Crystal_output\n",
-    "from CRYSTALpy.crystal_io import Properties_input\n",
-    "from CRYSTALpy.convert import cry_out2pmg\n",
+    "from CRYSTALpytools.crystal_io import write_properties_input\n",
+    "from CRYSTALpytools.crystal_io import Crystal_output\n",
+    "from CRYSTALpytools.crystal_io import Properties_input\n",
+    "from CRYSTALpytools.convert import cry_out2pmg\n",
     "\n",
     "\n",
     "#Create the bands input object\n",
@@ -814,8 +814,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import write_properties_input\n",
-    "from CRYSTALpy.crystal_io import Properties_input\n",
+    "from CRYSTALpytools.crystal_io import write_properties_input\n",
+    "from CRYSTALpytools.crystal_io import Properties_input\n",
     "\n",
     "#Create the doss input object\n",
     "doss_input = Properties_input()\n",
@@ -869,8 +869,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import write_properties_input\n",
-    "from CRYSTALpy.crystal_io import Properties_input\n",
+    "from CRYSTALpytools.crystal_io import write_properties_input\n",
+    "from CRYSTALpytools.crystal_io import Properties_input\n",
     "\n",
     "#Create the doss input object\n",
     "pdoss_input = Properties_input()\n",
@@ -926,8 +926,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import write_properties_input\n",
-    "from CRYSTALpy.crystal_io import Properties_input\n",
+    "from CRYSTALpytools.crystal_io import write_properties_input\n",
+    "from CRYSTALpytools.crystal_io import Properties_input\n",
     "\n",
     "#Create the doss input object\n",
     "pdoss_input = Properties_input()\n",
@@ -1000,8 +1000,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_gui, write_crystal_gui\n",
-    "from CRYSTALpy.convert import cry_pmg2gui\n",
+    "from CRYSTALpytools.crystal_io import Crystal_gui, write_crystal_gui\n",
+    "from CRYSTALpytools.convert import cry_pmg2gui\n",
     "\n",
     "from pymatgen.core import Structure, Lattice\n",
     "\n",
@@ -1192,7 +1192,7 @@
    "outputs": [],
    "source": [
     "import sys\n",
-    "sys.path.insert(1,'../CRYSTALpy/')\n",
+    "sys.path.insert(1,'../CRYSTALpytools/')\n",
     "from crystal_io import *\n",
     "from convert import *"
    ]
@@ -1204,7 +1204,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#from CRYSTALpy.crystal_io import write_crystal_gui\n",
+    "#from CRYSTALpytools.crystal_io import write_crystal_gui\n",
     "\n",
     "from pymatgen.core import Structure, Lattice\n",
     "from pymatgen.core.surface import SlabGenerator\n",
