--- a/tutorial/thermo-HA.ipynb
+++ b/tutorial/thermo-HA.ipynb
@@ -9,7 +9,7 @@
     "\n",
     "The script 'thermodyanmics.py' is a comprehensive module for lattice dynamics based on harmonic and quasi-harmonic level of theory. For simplicity, this tutorial is focused only on harmonic phonons. For quasi-harmonic part, please refer to 'thermodynamics-QHA'.\n",
     "\n",
-    "**Classes used in this tutorial are defined in 'CRYSTALpy.thermodynamics'. Documentations and source codes are attached at the bottom of this page.**"
+    "**Classes used in this tutorial are defined in 'CRYSTALpytools.thermodynamics'. Documentations and source codes are attached at the bottom of this page.**"
    ]
   },
   {
@@ -59,8 +59,8 @@
     }
    ],
    "source": [
-    "from CRYSTALpy import thermodynamics\n",
-    "from CRYSTALpy.thermodynamics import Harmonic\n",
+    "from CRYSTALpytools import thermodynamics\n",
+    "from CRYSTALpytools.thermodynamics import Harmonic\n",
     "\n",
     "rm_condition = Harmonic(write_out=False).from_file(\n",
     "    'data/freqf1-r0.out', scelphono=[[1, 0, 0], [0, 1, 0], [0, 0, 1]], auto_calc=False\n",
@@ -439,7 +439,7 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpy.thermodynamics.Harmonic at 0x7f4c65efd490>"
+       "<CRYSTALpytools.thermodynamics.Harmonic at 0x7f4c65efd490>"
       ]
      },
      "execution_count": 4,
@@ -919,7 +919,7 @@
     "                       qpoints.\n",
     "        \"\"\"\n",
     "        import numpy as np\n",
-    "        from CRYSTALpy.thermodynamics import Mode\n",
+    "        from CRYSTALpytools.thermodynamics import Mode\n",
     "\n",
     "        if hasattr(self, \"volume\"):\n",
     "            raise Exception(\"Data exists. Cannot overwriting the existing data.\")\n",
@@ -1069,7 +1069,7 @@
     "            self.volume, float, pymatgen structure.volume. Cell volume.\n",
     "                         Unit: Angstrom^3\n",
     "        \"\"\"\n",
-    "        from CRYSTALpy.convert import cry_out2pmg\n",
+    "        from CRYSTALpytools.convert import cry_out2pmg\n",
     "        from pymatgen.core.structure import Structure\n",
     "        import numpy as np\n",
     "\n",
