--- a/tutorial/thermo_file_readwrite.ipynb
+++ b/tutorial/thermo_file_readwrite.ipynb
@@ -8,7 +8,7 @@
     "# Basic I/O of DFPT\n",
     "The density functional perturbation theory (DFPT) specific methods and attributes are available in 'crystal_io.py' since July 2022.\n",
     "\n",
-    "**Classes used in this tutorial are defined in 'CRYSTALpy.crystal_io'. Documentations and source codes are attached at the bottom of this page.**"
+    "**Classes used in this tutorial are defined in 'CRYSTALpytools.crystal_io'. Documentations and source codes are attached at the bottom of this page.**"
    ]
   },
   {
@@ -55,7 +55,7 @@
     }
    ],
    "source": [
-    "from CRYSTALpy.crystal_io import Crystal_output\n",
+    "from CRYSTALpytools.crystal_io import Crystal_output\n",
     "\n",
     "paracetamol = Crystal_output()\n",
     "paracetamol.read_cry_output('data/freqf1-r0.out')\n",
