New repository name: CRYSTALpytools

--- a/unit_test/test_notebook.ipynb
+++ b/unit_test/test_notebook.ipynb
@@ -124,6 +124,52 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "0b237df5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from CRYSTALpytools.crystal_io import Crystal_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "f55bdd33",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['CRYSTAL\\n',\n",
+       " '0 0 0\\n',\n",
+       " '225\\n',\n",
+       " '4.217\\n',\n",
+       " '2\\n',\n",
+       " '12 0.    0.    0.\\n',\n",
+       " '8 0.5   0.5   0.5\\n',\n",
+       " 'END\\n']"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "Crystal_input().from_file('./data_test/mgo.d12').geom_block"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e04e386d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "id": "d6272357",
    "metadata": {},
@@ -398,7 +444,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.9.15"
   }
  },
  "nbformat": 4,
