Update thermodynamics tutorials and examples

--- a/examples/thermo-HA.ipynb
+++ b/examples/thermo-HA.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "18a94ee0",
    "metadata": {},
    "outputs": [
@@ -47,14 +47,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DFT total energy (EL) =  -5402457.523570631 KJ/mol\n",
-      "Helmholtz free energy (EL+E0+ET-TS) =  -5400802.066049164  KJ/mol\n",
-      "Gibbs free energy (EL+E0+ET+pV-TS) =  -5400802.020022742  KJ/mol\n",
-      "Zero-point energy (E0) =  1759.1003801887075  KJ/mol\n",
-      "Vibrational contribution to interla energy - E0 (ET) =  107.2036747375173  KJ/mol\n",
-      "Entropy*Temperature (TS) =  210846.5334596592  J/mol\n",
-      "Heat capacity =  665.5753182283241  J/mol*K\n",
-      "Entropy =  707.1827384191153  J/mol*K\n"
+      "DFT total energy (EL) =  -5402456.254965135 KJ/mol\n",
+      "Helmholtz free energy (EL+E0+ET-TS) =  -5400800.797467394  KJ/mol\n",
+      "Gibbs free energy (EL+E0+ET+pV-TS) =  -5400800.7514409665  KJ/mol\n",
+      "Zero-point energy (E0) =  1759.1003499056465  KJ/mol\n",
+      "Vibrational contribution to interla energy - E0 (ET) =  107.20366839971416  KJ/mol\n",
+      "Entropy*Temperature (TS) =  210846.5205645217  J/mol\n",
+      "Heat capacity =  665.5752785152763  J/mol*K\n",
+      "Entropy =  707.1826951686121  J/mol*K\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d5e8d24b",
    "metadata": {},
    "outputs": [
@@ -439,10 +439,10 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.thermodynamics.Harmonic at 0x7f4c65efd490>"
+       "<CRYSTALpytools.thermodynamics.Harmonic at 0x29e4506bd00>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -476,7 +476,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
