--- a/tutorial/thermo-HA.ipynb
+++ b/tutorial/thermo-HA.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "18a94ee0",
    "metadata": {},
    "outputs": [
@@ -47,14 +47,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "DFT total energy (EL) =  -5402457.523570631 KJ/mol\n",
-      "Helmholtz free energy (EL+E0+ET-TS) =  -5400802.066049164  KJ/mol\n",
-      "Gibbs free energy (EL+E0+ET+pV-TS) =  -5400802.020022742  KJ/mol\n",
-      "Zero-point energy (E0) =  1759.1003801887075  KJ/mol\n",
-      "Vibrational contribution to interla energy - E0 (ET) =  107.2036747375173  KJ/mol\n",
-      "Entropy*Temperature (TS) =  210846.5334596592  J/mol\n",
-      "Heat capacity =  665.5753182283241  J/mol*K\n",
-      "Entropy =  707.1827384191153  J/mol*K\n"
+      "DFT total energy (EL) =  -5402456.254965135 KJ/mol\n",
+      "Helmholtz free energy (EL+E0+ET-TS) =  -5400800.797467394  KJ/mol\n",
+      "Gibbs free energy (EL+E0+ET+pV-TS) =  -5400800.7514409665  KJ/mol\n",
+      "Zero-point energy (E0) =  1759.1003499056465  KJ/mol\n",
+      "Vibrational contribution to interla energy - E0 (ET) =  107.20366839971416  KJ/mol\n",
+      "Entropy*Temperature (TS) =  210846.5205645217  J/mol\n",
+      "Heat capacity =  665.5752785152763  J/mol*K\n",
+      "Entropy =  707.1826951686121  J/mol*K\n"
      ]
     }
    ],
@@ -146,7 +146,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "d5e8d24b",
    "metadata": {},
    "outputs": [
@@ -439,10 +439,10 @@
     {
      "data": {
       "text/plain": [
-       "<CRYSTALpytools.thermodynamics.Harmonic at 0x7f4c65efd490>"
+       "<CRYSTALpytools.thermodynamics.Harmonic at 0x29e4506bd00>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "a4076cdc-99fb-4733-831c-c524ce2959f6",
    "metadata": {},
    "outputs": [],
@@ -583,15 +583,16 @@
     "                            Unit: KJ/mol cell\n",
     "        \"\"\"\n",
     "        import numpy as np\n",
+    "        import scipy.constants as scst\n",
     "\n",
     "        if self.ncalc > 1:\n",
-    "            print('Error: This modulus is limited to a single frequency calculation.')\n",
-    "            return\n",
+    "            raise Exception(\n",
+    "                'This module is limited to a single frequency calculation.')\n",
     "\n",
-    "        hbar_freq = self.frequency[0] * 6.022141 * 6.626070E-2\n",
+    "        hbar_freq = self.frequency[0] * scst.Avogadro * scst.h * 1e9\n",
     "        self.zp_energy = 0.5 * hbar_freq\n",
     "\n",
-    "        return self.zp_energy"
+    "        return self.zp_energy\n"
    ]
   },
   {
@@ -631,11 +632,11 @@
     "                        given mode. Unit: KJ/mol cell\n",
     "        \"\"\"\n",
     "        import numpy as np\n",
-    "        import sys\n",
+    "        import scipy.constants as scst\n",
     "\n",
     "        if self.ncalc > 1:\n",
-    "            print('Error: This modulus is limited to a single frequency calculation.')\n",
-    "            sys.exit(1)\n",
+    "            raise Exception(\n",
+    "                'This module is limited to a single frequency calculation.')\n",
     "\n",
     "        if not hasattr(self, 'zp_energy'):\n",
     "            self.get_zp_energy()\n",
@@ -644,8 +645,8 @@
     "            self.U_vib = self.zp_energy\n",
     "            return self.U_vib\n",
     "\n",
-    "        hbar_freq = self.frequency[0] * 6.022141 * 6.626070E-2\n",
-    "        kb_t = 1.380649E-3 * 6.022141 * temperature\n",
+    "        hbar_freq = self.frequency[0] * scst.Avogadro * scst.h * 1e9\n",
+    "        kb_t = scst.k * scst.Avogadro * temperature * 1e-3\n",
     "        expon = np.exp(hbar_freq / kb_t)\n",
     "        self.U_vib = self.zp_energy + hbar_freq / (expon - 1)\n",
     "\n",
@@ -688,21 +689,21 @@
     "                          Unit: J/mol cell*K\n",
     "        \"\"\"\n",
     "        import numpy as np\n",
-    "        import sys\n",
+    "        import scipy.constants as scst\n",
     "\n",
     "        if self.ncalc > 1:\n",
-    "            print('Error: This modulus is limited to a single frequency calculation.')\n",
-    "            sys.exit(1)\n",
+    "            raise Exception(\n",
+    "                'This module is limited to a single frequency calculation.')\n",
     "\n",
     "        if temperature == 0:\n",
     "            self.entropy = 0\n",
     "            return self.entropy\n",
     "\n",
-    "        hbar_freq = self.frequency[0] * 6.022141 * 6.626070E-2\n",
-    "        kb_t = 1.380649E-3 * 6.022141 * temperature\n",
+    "        hbar_freq = self.frequency[0] * scst.Avogadro * scst.h * 1e12\n",
+    "        kb_t = scst.k * scst.Avogadro * temperature\n",
     "        expon = np.exp(hbar_freq / kb_t)\n",
     "        entS = kb_t * (hbar_freq / kb_t / (expon - 1) - np.log(1 - 1 / expon))\n",
-    "        self.entropy = entS / temperature * 1000\n",
+    "        self.entropy = entS / temperature\n",
     "\n",
     "        return self.entropy"
    ]
@@ -744,22 +745,21 @@
     "            Unit: J/mol cell*K\n",
     "        \"\"\"\n",
     "        import numpy as np\n",
-    "        import sys\n",
+    "        import scipy.constants as scst\n",
     "\n",
     "        if self.ncalc > 1:\n",
-    "            print('Error: This modulus is limited to a single frequency calculation.')\n",
-    "            sys.exit(1)\n",
+    "            raise Exception(\n",
+    "                'This module is limited to a single frequency calculation.')\n",
     "\n",
     "        if temperature == 0:\n",
     "            self.C_v = 0\n",
     "            return self.C_v\n",
     "\n",
-    "        hbar_freq = self.frequency[0] * 6.022141 * 6.626070E-2\n",
-    "        kb_t = 1.380649E-3 * 6.022141 * temperature\n",
+    "        hbar_freq = self.frequency[0] * scst.Avogadro * scst.h * 1e12\n",
+    "        kb_t = scst.k * scst.Avogadro * temperature\n",
     "        expon = np.exp(hbar_freq / kb_t)\n",
     "\n",
-    "        self.C_v = hbar_freq**2 / kb_t / \\\n",
-    "            temperature * expon / (expon - 1)**2 * 1000\n",
+    "        self.C_v = hbar_freq**2 / kb_t / temperature * expon / (expon - 1)**2\n",
     "\n",
     "        return self.C_v"
    ]
@@ -1290,6 +1290,7 @@
     "        \"\"\"\n",
     "        import warnings\n",
     "        import numpy as np\n",
+    "        import scipy.constants as scst\n",
     "\n",
     "        # Generate temperature and pressure series\n",
     "        if temptpress:\n",
@@ -1319,10 +1320,10 @@
     "        for T in self.temperature:\n",
     "            gibbs_t = []\n",
     "            U_vib_t, entropy_t, C_v_t = self._phonon_sumup(temperature=T, calculate_zp=False)\n",
-    "            helm_t = -entropy_t * T / 1000 + U_vib_t + self.edft\n",
+    "            helm_t = -entropy_t * T * 1e-3 + U_vib_t + self.edft\n",
     "\n",
     "            for p in self.pressure:\n",
-    "                gibbs_tp = p * self.volume * 0.602214 + helm_t\n",
+    "                gibbs_tp = p * self.volume * scst.Avogadro * 1e-24 + helm_t\n",
     "                gibbs_t.append(gibbs_tp)\n",
     "\n",
     "            # nTemp * nqpoint\n",
@@ -1411,17 +1412,20 @@
     "        Output:\n",
     "            filename, text file.\n",
     "        \"\"\"\n",
+    "        import scipy.constants as scst\n",
+    "        from CRYSTALpytools.units import eV_to_H\n",
+    "\n",
     "        if not self.write_out:\n",
     "            print('Harmonic.write_out = False, return to empty.')\n",
     "            return\n",
     "        \n",
     "        file = open(self.filename, 'w')\n",
     "        file.write('%-21s%12.4e%-15s%12.4e%-10s\\n' %\n",
-    "                   ('# DFT TOTAL ENERGY = ', self.edft / 96.485340,\n",
+    "                   ('# DFT TOTAL ENERGY = ', eV_to_H(self.edft),\n",
     "                    ' eV,         = ', self.edft, ' kJ/mol'))\n",
     "        file.write('%-21s%12.6f%-15s%12.6f%-10s\\n' %\n",
     "                   ('# CELL VOLUME      = ', self.volume,\n",
-    "                    ' Angstrom^3, = ', self.volume * 0.602214, ' cm^3/mol'))\n",
+    "                    ' Angstrom^3, = ', self.volume * scst.Avogadro * 1e-24, ' cm^3/mol'))\n",
     "        file.write('%s\\n' % '# LATTICE PARAMETERS (ANGSTROM, DEGREE)')\n",
     "        file.write('%12s%12s%12s%12s%12s%12s\\n' % ('A', 'B', 'C',\n",
     "                                                   'ALPHA', 'BETA', 'GAMMA'))\n",
@@ -1481,7 +1485,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.13"
+   "version": "3.8.15"
   }
  },
  "nbformat": 4,
